fix search bar issue on mobile

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -13,6 +13,7 @@
 .search-bar{
     width: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 12px;
 }
